After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747053 - core dump when using shuffle and playing track changes
core dump when using shuffle and playing track changes
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: playback
3.2
Other Linux
: Normal critical
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
: 747864 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-03-30 18:31 UTC by foss.freedom
Modified: 2015-04-14 21:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core dump (34.70 KB, text/plain)
2015-03-30 18:31 UTC, foss.freedom
Details

Description foss.freedom 2015-03-30 18:31:32 UTC
Created attachment 300618 [details]
core dump

Using 15.04 and Rhythmbox 3.2

Click shuffle.  Start playing a track - towards the end of the track, rhythmbox crashes.

backtrace enclosed.
Comment 1 Jonathan Matthew 2015-03-30 23:35:32 UTC
fixed in commit 9a024fa
Comment 2 Jonathan Matthew 2015-04-14 21:48:34 UTC
*** Bug 747864 has been marked as a duplicate of this bug. ***