shuffle: add the playing entry if it's not already there

When switching to shuffle from some other play order, the playing entry
won't already be in the history, so we need to allow it to be added.
Otherwise, we still don't want to move it if it's already there.

https://bugzilla.gnome.org/show_bug.cgi?id=747053